Change button color

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -12,5 +12,5 @@
     <%= form.label :password, class:"text-black"%>:
     <%= form.password_field :password, class:"border-2 border-black", data: {target: 'registration.password'}%>
   </div>
-  <%= form.submit 'Submit'%>
+  <%= form.submit 'Submit', class: "btn btn-blue"%>
 <% end %>
